--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -2,7 +2,7 @@
     "name": "StopFingerprinting",
     "version": "0.1.8",
     "manifest_version": 2,
-    "description": "Fingerprinting analysis and protection extension.",
+    "description": "Fingerprinting analysis extension.",
     "background": {
         "page": "background.html"
     },
