--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -11,5 +11,20 @@
         "storage",
         "fontSettings"
     ],
-    "content_security_policy": "script-src 'self' https://stopfingerprinting.irisa.fr; object-src 'self' https://stopfingerprinting.irisa.fr"
+    "content_security_policy": "script-src 'self' https://stopfingerprinting.irisa.fr; object-src 'self' https://stopfingerprinting.irisa.fr",
+    "homepage_url": "https://stopfingerprinting.irisa.fr",
+    "options_page": "common/options.html",
+    "icons": {
+        "16": "common/icons/16.png",
+        "48": "common/icons/48.png",
+        "128": "common/icons/128.png"
+    },
+    "content_scripts": [
+        {
+            "matches": ["*://stopfingerprinting.irisa.fr/fingerprint/flash*"],
+            "js": ["flashfp_content_script.js"],
+            "all_frames": true,
+            "run_at": "document_start"
+        }
+    ]
 }
