--- a/chrome/settings.json
+++ b/chrome/settings.json
@@ -2,5 +2,7 @@
     "submitUrl": "https://stopfingerprinting.irisa.fr/fingerprint/submit",
     "flashFingerprinterUrl": "https://stopfingerprinting.irisa.fr/fingerprint/flash",
     "submitInterval": 3600000,
-    "version": "0.1.9"
+    "version": "0.1.10",
+    "logsEnabled": true,
+    "logsUrl": "https://stopfingerprinting.irisa.fr/fingerprint/upload-logs"
 }
