Add setting to be able to reload the iframe in every fingerprint

--- a/chrome/settings.json
+++ b/chrome/settings.json
@@ -4,5 +4,6 @@
     "submitInterval": 3600000,
     "version": "0.1.10.1",
     "logsEnabled": true,
-    "logsUrl": "https://stopfingerprinting.irisa.fr/fingerprint/upload-logs"
+    "logsUrl": "https://stopfingerprinting.irisa.fr/fingerprint/upload-logs",
+    "reloadIframe": true
 }
