--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -13,6 +13,7 @@
     ],
     "content_security_policy": "script-src 'self' https://stopfingerprinting.irisa.fr; object-src 'self' https://stopfingerprinting.irisa.fr",
     "homepage_url": "https://stopfingerprinting.irisa.fr",
+    "options_page": "common/options.html",
     "icons": {
         "16": "common/icons/16.png",
         "48": "common/icons/48.png",
