--- a/chrome/settings.json
+++ b/chrome/settings.json
@@ -5,5 +5,6 @@
     "version": "0.1.14",
     "logsEnabled": true,
     "logsUrl": "https://stopfingerprinting.irisa.fr/fingerprint/upload-logs",
-    "reloadIframe": true
+    "reloadIframe": true,
+    "statsUrl": "https://stopfingerprinting.irisa.fr/fingerprint/stats"
 }
